@@ -1,3 +1,7 @@
+2002-07-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-ofmipd.ht: Document -A option.
+
 2002-07-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* download.ht: Update links for tmda.net.
